# py-contract-check

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  deny.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml  takumi-guard.yml  zizmor.yml
benches/: runtime_overhead.rs
bindings/python-contracts-rs/: Cargo.toml
bindings/python-contracts-rs/src/: lib.rs
crates/rust-contract-checks/: Cargo.toml
crates/rust-contract-checks-macros/: Cargo.toml
crates/rust-contract-checks-macros/src/: lib.rs
crates/rust-contract-checks/src/: config.rs  lib.rs  metadata.rs  report.rs  runtime.rs
docs/: contracts.md  invariant-policies.md  testing.md  typed-predicates.md
examples/: quickstart.py  quickstart.rs  typed_predicates.py
python/contract_check/: __init__.py  testing.py
python/python_contracts_rs/: __init__.py  _native.pyi  contracts.py  models.py  predicate_types.py  testing.py
tests/: contracts.rs
tests/python/: test_contracts.py  test_developer_experience.py
