[workspace]
members = [
    "bindings/python-contracts-rs",
    "crates/rust-contract-checks",
    "crates/rust-contract-checks-macros",
]
default-members = ["crates/rust-contract-checks"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sotanengel/py-contract-check"
rust-version = "1.81"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unwrap_used = "deny"
