[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "contract-check"
version = "0.3.1"
description = "Design-by-contract library for Python, implemented in Rust."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "py-contract-check maintainers" }]
keywords = ["python", "contract", "design-by-contract", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "mypy>=1.15,<2.0",
    "pip-audit>=2.8,<3.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<0.16",
]

[tool.maturin]
manifest-path = "bindings/python-contracts-rs/Cargo.toml"
python-source = "python"
module-name = "python_contracts_rs._native"
features = ["extension-module"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
mypy_path = "python"
packages = ["python_contracts_rs"]
strict = true
ignore_missing_imports = true
