[package]
name = "python-contracts-rs-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for contract-check."

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py39"] }
rust-contract-checks = { version = "0.4.0", path = "../../crates/rust-contract-checks", default-features = false }

[lib]
name = "_native"
crate-type = ["cdylib"]

[lints]
workspace = true
