[package]
name = "rust-contract-checks-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for rust-contract-checks."

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }

[lib]
proc-macro = true

[lints]
workspace = true
